--- a/Kalp Frontend/package.json
+++ b/Kalp Frontend/package.json
@@ -6,8 +6,13 @@
     "lucide-react": "^0.289.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.6",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.3.0"
   },
   "scripts": {
